Fixed background color and dropdown triangle z-index again

--- a/src/components/layout/storefront.css
+++ b/src/components/layout/storefront.css
@@ -12,7 +12,7 @@
 .content-container {
   flex: 1 1 auto;
   margin-top: 222px;
-  background: var(--background-color);
+  background: #EBEAEA;
   z-index: 0;
 }
 
