--- a/src/pages/catalog/products.css
+++ b/src/pages/catalog/products.css
@@ -3,7 +3,6 @@
 @import "colors";
 
 .catalog {
-  background-color: #EBEAEA;
   overflow: auto;
 }
 
